# findStones

./: CMakeLists.txt  README.md
src/: findStonepairs.cpp  findStonepairs.hpp
test/: CMakeLists.txt  test.cpp
